integration of new navbar burger-menu trigger, fix problem with footer width, integration of new footer animation, fix carousel imx height-width, fix carousel overlapping burger-menu options

--- a/styles/index.css
+++ b/styles/index.css
@@ -27,7 +27,7 @@ main .container{
   margin:auto;
   padding:auto;
   width: 80%;
-  max-height:40em;
+  height:auto;
 }
 .carousel-inner .item:hover > img {
   transform: scale(1.05);
@@ -58,17 +58,15 @@ li .active{
 #################################################*/
 footer .container{
   display:flex;
-  position: absolute;
   flex-direction: row;
   flex-wrap:wrap;
   justify-content:space-around;
-  width:100%;
+
   min-height:20em;
   background-color: #231f1f;
   color: white;
   font-family:"josefin sans", sans-serif !important;
   padding: 2em;
-  bottom: 0px;
   margin:0!important;
   width:100% !important;
 }
@@ -340,15 +338,12 @@ nav ul{
     height: 100%;
 }
 
-@media (max-width: 575px){
+@media (max-width: 750px){
 
     .logo{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width:88px;
-        height: 78px;
-        padding: 9px;
+      margin-left: 3%;
+      width: 4em;
+      height: 2em;
     }
     nav .container{
         position: relative;
@@ -414,6 +409,7 @@ nav ul{
         background-color: #231f1f;
         display: none;
         border-top: solid white;
+        z-index:2
     }
 
     .option input:checked ~ li{
